# appendable

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  package-lock.json  package.json
.github/workflows/: benchmark.yml  example-client.yml  format.yml  test.yml
appendable-rs/: Cargo.toml  README.md  USAGE.md
appendable-rs/appendable/: Cargo.toml  mock_data.jsonl
appendable-rs/appendable/src/: index_file.rs  io.rs  json_tokenizer.rs  lib.rs
appendable-rs/appendable/src/handler/: jsonl_handler.rs
appendable-rs/appendable/src/tests/: jsonl_index_file.rs
appendable-rs/cmd/: Cargo.toml
appendable-rs/cmd/src/: main.rs
appendable-rs/protocol/src/: field_type.rs  lib.rs  protocol.rs
cmd/: main.go  main_test.go
docs/: GLOSSARY.md
examples/: README.md
examples/benchmarkdiff/: main.go
examples/chat/: DESIGN.md  README.md  declarations.d.ts  index.html  package-lock.json  package.json  vite.config.ts
examples/client/: appendable.min.js  appendable.min.js.map  editor.js  index.html  server.go  styles.css
examples/search/: index.html  server.go
examples/visualizer/: main.go
examples/workspace/: fetch_csv.py  fetch_data.py  fetch_jsonl.py  requirements.txt
pkg/appendable/: append.go  append_test.go  appendable.go  appendable_test.go  csv_handler.go  index_file.go  index_file_csv_test.go  index_file_jsonl_test.go  index_file_test.go  io.go  io_test.go  jsonl_handler.go  typescript.go  (+1 more)
src/: btree.ts  cache.ts  data-file.ts  database.ts  index-file.ts  index.ts  multipart.test.ts  multipart.ts  node.ts  range-request.ts  resolver.ts  uvarint.ts
(+148 files in other folders)
