
[workspace]
members=[
    "cmd",
    "appendable",
    "btree",
    "encoding",
    "protocol"
]


# Use Cargo's new feature resolver, which can handle target-specific features.
# Explicit opt-in is required even with the 2021 edition because we use a
# virtual workspace.
# See: https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#cargos-new-feature-resolver
resolver = "2"

[workspace.package]
edition = "2021"
# TODO(friendlymatthew | kevmo314) sync up on Rust version | i.e. rust-version = "1.75.0"