[package]
name = "appendable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path="../protocol" }
serde_json = "1.0.111"
xxhash-rust = { version = "0.8.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3.9.0"

